# ifritJP.github.io

./: .gitignore  .gitmodules  documents  history.md  index.html  index.org  links.html  links.org  readme.org  transcompiler.html  transcompiler.org
LuneScript-webFront/: server.go
LuneScript-webFront/contents/: index.html  lns.lua  lune  lunescript-front.js  lunescript-main-1.rockspec
ai_agent_Lune/: all.ja.org  step.md
ai_agent_Lune/artifacts/: index.html  main.js  style.css
ai_agent_Lune/test/: doc_sample.lns  lnsc  macro_sample.lns  macro_stmt_func.lns  macro_stmt_list.lns  macro_stmt_sample.lns  shadowing_test.lns  test_generics.lns  test_macro_assert_debug.lns  test_macro_assert_debug_mut.lns  test_macro_assign.lns  test_macro_call.lns  test_macro_expr.lns  test_macro_fix_try.lns  test_macro_measure_fix.lns  test_macro_minimal.lns  test_macro_safe_div.lns  test_macro_swap.lns
ai_agent_blog/: draft.org  work_record.md
blog/: Gemfile  _config.yml
blog/_includes/: head.html  social.html
blog/_posts/: 2019-05-23-rasp0w.org  2019-06-28-text-to-speech.org  2019-07-10-stream.org
blog/_site/: 404.html  feed.xml  index.html
blog/draft/: 2019-02-08-exchange.org  (+4 more)
blog2/: config.toml  config.yml  server.sh
chart/: index.html  script.js  spec.md  step.md  style.css
files/: index.html  mnbw.json  mnbw.xpi
hugo/: config.docuapi.toml  config.learn.toml  config.toml  dump  makeAll.lns  makefile
sample/: force.update.html
sr_contents/: index.html  sr.css  sr.js
wcloud/: Makefile  README.md  pyproject.toml
wcloud/src/wcloud/: __init__.py  main.py
(+1153 files in other folders)
